--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Página dedicada a las historia dominicana"
+      content="Página dedicada a los presidentes de la República dominicana"
     />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Aprendamos de RD</title>
+    <title>Presidentes de la República Dominicana</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
